:wrench: add basic cp functionality, remove Stage class, add logger for study results

--- a/plugins/csp-user-study/CMakeLists.txt
+++ b/plugins/csp-user-study/CMakeLists.txt
@@ -14,33 +14,34 @@ endif()
 
 file(GLOB SOURCE_FILES src/*.cpp)
 
-# Resoucre files and header files are only added in order to make them available in your IDE.
+# Resource files and header files are only added in order to make them available in your IDE.
 file(GLOB HEADER_FILES src/*.hpp)
-file(GLOB_RECURSE RESOUCRE_FILES gui/*)
+file(GLOB_RECURSE RESOURCE_FILES gui/*)
 
 add_library(csp-user-study SHARED
   ${SOURCE_FILES}
   ${HEADER_FILES}
-  ${RESOUCRE_FILES}
+  ${RESOURCE_FILES}
 )
 
 target_link_libraries(csp-user-study
   PUBLIC
     cs-core
+    cs-scene
 )
 
 # Add this Plugin to a "plugins" folder in your IDE.
 set_property(TARGET csp-user-study PROPERTY FOLDER "plugins")
 
 # We mark all resource files as "header" in order to make sure that no one tries to compile them.
-set_source_files_properties(${RESOUCRE_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
+set_source_files_properties(${RESOURCE_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
 
 # Make directory structure available in your IDE.
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES 
-  ${SOURCE_FILES} ${HEADER_FILES} ${RESOUCRE_FILES}
+  ${SOURCE_FILES} ${HEADER_FILES} ${RESOURCE_FILES}
 )
 
 # install plugin -----------------------------------------------------------------------------------
 
-install(TARGETS   csp-anchor-labels DESTINATION "share/plugins")
+install(TARGETS   csp-user-study    DESTINATION "share/plugins")
 install(DIRECTORY "gui"             DESTINATION "share/resources")
