--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "plugins/csp-volume-rendering"]
 	path = plugins/csp-volume-rendering
 	url = https://github.com/cosmoscout/csp-volume-rendering.git
+[submodule "plugins/csp-vestec"]
+	path = plugins/csp-vestec
+	url = https://github.com/cosmoscout/csp-vestec.git
