Update vestec plugin

--- a/config/base/CMakeLists.txt
+++ b/config/base/CMakeLists.txt
@@ -29,6 +29,7 @@ if (UNIX)
 endif()
 
 # install files for all platforms ------------------------------------------------------------------
-install(FILES "scene/simple_desktop.json" DESTINATION "share/config")
-install(FILES "scene/vestec.json"         DESTINATION "share/config")
-install(DIRECTORY "vista"                 DESTINATION "share/config")
+install(FILES "scene/simple_desktop.json"  DESTINATION "share/config")
+install(FILES "scene/vestec.json"          DESTINATION "share/config")
+install(FILES "scene/vestec-diseases.json" DESTINATION "share/config")
+install(DIRECTORY "vista"                  DESTINATION "share/config")
