--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,6 +93,7 @@ jobs:
           sudo apt-get install libboost-all-dev
           ccache --max-size 5G
           ccache -z
+          ccache --clear
       - name: Build Externals
         env: # Thanks to ccache, it build actually faster without these options.
           COSMOSCOUT_USE_PCH: false
