--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,7 +90,7 @@ jobs:
       shell: cmd
       run: >
           make.bat -G "Visual Studio 16 2019" -A x64
-          -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
+          -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
     - name: Create Release
       run: | 
         move install\windows-Release cosmoscout-vr
