:wrench: add DFNs

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -4,8 +4,8 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION
+DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION, VRPNCONTROLLERDEBUG
 DUMPDFNGRAPHS       = FALSE
 
 
@@ -34,6 +34,22 @@ GRAPH               = xml/spacenavigator_navigation.xml
 [KEYBOARDNAVIGATION]
 ROLE                = KEYBOARDNAVIGATION
 GRAPH               = xml/keyboard_navigation.xml
+
+[VRPNCONTROLLERDEBUG]
+ROLE                = VRPN_CONTROLLER_DEBUG
+GRAPH               = xml/gamepad_debug.xml
+
+[VRPNCONTROLLERINPUT]
+ROLE                = VRPN_CONTROLLER_INPUT
+GRAPH               = xml/gamepad_standardinput.xml
+
+[VRPNCONTROLLERNAVIGATION]
+ROLE                = VRPN_CONTROLLER_NAVIGATION
+GRAPH               = xml/gamepad_navigation.xml
+
+[MOUSECONTROLLERSELECTOR]
+ROLE                = MOUSE_CONTROLLER_NEGOTIATOR
+GRAPH               = xml/3dmouse_negotiator.xml
 
 ######################## device drivers ###############################
 
@@ -65,4 +81,21 @@ HISTORY             = 10
 SENSORS             = SPACENAV_MAIN
 
 [SPACENAV_MAIN]
+RAWID               = 0
+
+#----------------------------------------------------------------------
+
+[XBOXCONTROLLER]
+TYPE                = VRPN
+HISTORY             = 0
+SENSORS             = XBOX_BUTTON, XBOX_ANALOG
+
+[XBOX_BUTTON]
+TYPE                = BUTTON
+NAME                = microsoft0@localhost
+RAWID               = 0
+
+[XBOX_ANALOG]
+TYPE                = ANALOG
+NAME                = microsoft0@localhost
 RAWID               = 0
