--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -5,7 +5,7 @@
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
 DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION, VRPNCONTROLLERDEBUG
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION
 DUMPDFNGRAPHS       = FALSE
 
 
