:tada: add controller DFN

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -5,7 +5,7 @@
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
 DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, XBOXCONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNCONTROLLERINPUT, VRPNCONTROLLERNAVIGATION
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, VRPNXBOXCONTROLLER
 DUMPDFNGRAPHS       = FALSE
 
 
@@ -46,6 +46,10 @@ GRAPH               = xml/gamepad_standardinput.xml
 [VRPNCONTROLLERNAVIGATION]
 ROLE                = VRPN_CONTROLLER_NAVIGATION
 GRAPH               = xml/gamepad_navigation.xml
+
+[VRPNXBOXCONTROLLER]
+ROLE                = VRPN_CONTROLLER_XBOX360
+GRAPH               = xml/gamepad_xbox360controller.xml
 
 [MOUSECONTROLLERSELECTOR]
 ROLE                = MOUSE_CONTROLLER_NEGOTIATOR
