--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
     - name: Checkout Submodules
-      run: git submodule update --init
+      run: git submodule update --init --recursive
     - name: Create Release
       run: externals/git-archive-all.sh/git-archive-all.sh --prefix cosmoscout-vr/ source-with-submodules.tar.gz
     - name: Upload Release
@@ -32,7 +32,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
     - name: Checkout Submodules
-      run: git submodule update --init
+      run: git submodule update --init --recursive
     - name: Download Dependencies
       run: |
         sudo apt-get update -q
@@ -65,7 +65,7 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
     - name: Checkout Submodules
-      run: git submodule update --init
+      run: git submodule update --init --recursive
     - name: Download Boost
       run: |
         # From https://github.com/actions/virtual-environments/issues/2667
