:wrench: Use custom vrpn config on linux and windows

--- a/config/base/CMakeLists.txt
+++ b/config/base/CMakeLists.txt
@@ -6,6 +6,7 @@
 
 # install platform dependent files -----------------------------------------------------------------
 if (WIN32)
+  install(FILES "vrpn/vrpn_csvr-windows.cfg"          DESTINATION "bin" RENAME "vrpn/vrpn_csvr.cfg" )
   install(FILES "spice/simple-windows.txt"            DESTINATION "share/config/spice" RENAME "simple.txt")
   install(FILES "scene/simple_vive.json"              DESTINATION "share/config")
   install(FILES "scripts/start.bat"                   DESTINATION "bin")
@@ -16,6 +17,7 @@ if (WIN32)
 endif()
 
 if (UNIX)
+  install(FILES "vrpn/vrpn_csvr-linux.cfg"          DESTINATION "bin" RENAME "vrpn/vrpn_csvr.cfg" )
   install(FILES "spice/simple-linux.txt"            DESTINATION "share/config/spice" RENAME "simple.txt")
   install(FILES "scripts/start.sh"                  DESTINATION "bin"
           PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ)
@@ -31,4 +33,3 @@ endif()
 # install files for all platforms ------------------------------------------------------------------
 install(FILES "scene/simple_desktop.json" DESTINATION "share/config")
 install(DIRECTORY "vista"                 DESTINATION "share/config")
-install(FILES "vrpn/vrpn_csvr.cfg"        DESTINATION "bin")
