:tada: First basic working version of the package installer.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -312,3 +312,4 @@ add_subdirectory(resources)
 add_subdirectory(src)
 add_subdirectory(plugins)
 add_subdirectory(tools/eclipse-shadow-generator)
+add_subdirectory(tools/package-manager)
