--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 !/plugins/csp-satellites
 !/plugins/csp-sharad
 !/plugins/csp-simple-bodies
+!/plugins/csp-simple-objects
 !/plugins/csp-stars
 !/plugins/csp-timings
 !/plugins/csp-trajectories
