--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -193,7 +193,6 @@ jobs:
       contains(github.event.head_commit.message, '[run-ci]')
     env:
       BOOST_ROOT_1_72_0: C:\hostedtoolcache\windows\Boost\1.72.0\x86_64
-      BUILDCACHE_IMPERSONATE: cl.exe
       COSMOSCOUT_USE_PCH: true
       COSMOSCOUT_USE_UNITY_BUILD: true
     steps:
@@ -219,12 +218,12 @@ jobs:
         shell: cmd
         run: >
           make_externals.bat -G "Visual Studio 16 2019" -A x64
-          -DCMAKE_VS_GLOBALS="CLToolExe=sccache.exe;TrackFileAccess=false"
+          -DCMAKE_CXX_COMPILER_LAUNCHER=sccache -DCMAKE_C_COMPILER_LAUNCHER=sccache
       - name: Build CosmoScout VR
         shell: cmd
         run: >
           make.bat -G "Visual Studio 16 2019" -A x64
-          -DCMAKE_VS_GLOBALS="CLToolExe=sccache.exe;TrackFileAccess=false"
+          -DCMAKE_CXX_COMPILER_LAUNCHER=sccache -DCMAKE_C_COMPILER_LAUNCHER=sccache
           -DCOSMOSCOUT_UNIT_TESTS=On -DBOOST_ROOT=%BOOST_ROOT_1_72_0%
       - name: Run Tests
         shell: cmd
