--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -202,6 +202,8 @@ jobs:
         uses: hendrikmuhs/ccache-action@v1.2.5
         with:
           key: msvc
+      - name: Setup CMD
+        uses: ilammy/msvc-dev-cmd@v1
       - name: Download Dependencies
         run: |
           # From https://github.com/actions/virtual-environments/issues/2667
