--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -8,11 +8,12 @@
 
 # assets -------------------------------------------------------------------------------------------
 
-install(DIRECTORY "textures"  DESTINATION "share/resources")
-install(DIRECTORY "gui"       DESTINATION "share/resources")
-install(DIRECTORY "icons"     DESTINATION "share/resources")
-install(DIRECTORY "locations" DESTINATION "share/resources")
-install(DIRECTORY "shaders"   DESTINATION "share/resources")
+install(DIRECTORY "textures"          DESTINATION "share/resources")
+install(DIRECTORY "gui"               DESTINATION "share/resources")
+install(DIRECTORY "icons"             DESTINATION "share/resources")
+install(DIRECTORY "locations"         DESTINATION "share/resources")
+install(DIRECTORY "shaders"           DESTINATION "share/resources")
+install(DIRECTORY "transferfunctions" DESTINATION "share/resources")
 
 # chromium embedded framework ----------------------------------------------------------------------
 
