:tada: Add WFS plugin.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 !/plugins/csp-timings
 !/plugins/csp-trajectories
 !/plugins/csp-web-api
+!/plugins/csp-wfs-overlays
 !/plugins/csp-wms-overlays
 
 *.sublime*
