ICAROS interaction inis

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -7,8 +7,8 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION
+DEVICEDRIVERS       = KEYBOARD, MOUSE, ICAROS
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, ICAROSNAVIGATION, KEYBOARDNAVIGATION
 DUMPDFNGRAPHS       = FALSE
 
 
@@ -37,6 +37,10 @@ GRAPH               = xml/spacenavigator_navigation.xml
 [KEYBOARDNAVIGATION]
 ROLE                = KEYBOARDNAVIGATION
 GRAPH               = xml/keyboard_navigation.xml
+
+[ICAROSNAVIGATION]
+ROLE                = ICAROSNAVIGATION
+GRAPH               = xml/icaros_navigation.xml
 
 ######################## device drivers ###############################
 
@@ -69,3 +73,12 @@ SENSORS             = SPACENAV_MAIN
 
 [SPACENAV_MAIN]
 RAWID               = 0
+
+[ICAROS]
+TYPE                = ICAROS
+HISTORY             = 10
+SENSORS             = ICAROS_CONTROLLER
+
+[ICAROS_CONTROLLER]
+RAWID               = 0
+
