--- a/plugins/csp-wfs-overlays/CMakeLists.txt
+++ b/plugins/csp-wfs-overlays/CMakeLists.txt
@@ -45,3 +45,4 @@ source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
 
 install(TARGETS   csp-wfs-overlays DESTINATION "share/plugins")
 install(DIRECTORY "gui"             DESTINATION "share/resources")
+install(DIRECTORY "textures" DESTINATION "share/resources")
