:tada: Add cs-scene

--- a/src/cs-audio/CMakeLists.txt
+++ b/src/cs-audio/CMakeLists.txt
@@ -21,6 +21,7 @@ target_link_libraries(cs-audio
   PUBLIC
     ${OPENAL_LIBRARY}
     cs-utils
+    cs-scene
 )
 
 if(COSMOSCOUT_USE_PRECOMPILED_HEADERS)
