--- a/plugins/csp-visual-query/CMakeLists.txt
+++ b/plugins/csp-visual-query/CMakeLists.txt
@@ -14,6 +14,7 @@ endif()
 # build plugin -------------------------------------------------------------------------------------
 
 file(GLOB SOURCE_FILES src/*.cpp src/*/*.cpp src/*/*/*.cpp)
+file(GLOB SHADER_FILES src/*/*.glsl src/*/*/*.glsl)
 file(GLOB NODE_FILES src/*/*.js src/*/*/*.js)
 file(GLOB CONTROL_FILES src/controls/*.js)
 
@@ -24,6 +25,7 @@ file(GLOB_RECURSE RESOURCE_FILES gui/*)
 add_library(csp-visual-query SHARED
   ${SOURCE_FILES}
   ${HEADER_FILES}
+  ${SHADER_FILES}
   ${NODE_FILES}
   ${CONTROL_FILES}
   ${RESOURCE_FILES}
@@ -41,18 +43,20 @@ set_property(TARGET csp-visual-query PROPERTY FOLDER "plugins")
 
 # We mark all resource files as "header" in order to make sure that no one tries to compile them.
 set_source_files_properties(${RESOURCE_FILES} PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${SHADER_FILES}   PROPERTIES HEADER_FILE_ONLY true)
 set_source_files_properties(${NODE_FILES}     PROPERTIES HEADER_FILE_ONLY true)
 set_source_files_properties(${CONTROL_FILES}  PROPERTIES HEADER_FILE_ONLY true)
 
 # Make directory structure available in your IDE.
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
-  ${SOURCE_FILES} ${HEADER_FILES} ${NODE_FILES} ${CONTROL_FILES} ${RESOURCE_FILES}
+  ${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES} ${NODE_FILES} ${CONTROL_FILES} ${RESOURCE_FILES}
 )
 
 # install plugin -----------------------------------------------------------------------------------
 
 install(TARGETS csp-visual-query DESTINATION "share/plugins")
 install(DIRECTORY "gui" DESTINATION "share/resources")
+install(FILES   ${SHADER_FILES}       DESTINATION "share/resources/shaders/csp-visual-query")
 install(FILES   ${NODE_FILES}         DESTINATION "share/resources/nodes/csp-visual-query")
 install(FILES   ${CONTROL_FILES}      DESTINATION "share/resources/nodes/csp-visual-query")
 
