--- a/.gitmodules
+++ b/.gitmodules
@@ -59,3 +59,6 @@
 [submodule "externals/openal-soft"]
 	path = externals/openal-soft
 	url = https://github.com/kcat/openal-soft.git
+[submodule "externals/libsndfile"]
+	path = externals/libsndfile
+	url = https://github.com/libsndfile/libsndfile.git
