:tada: Add support for third party libraries in the node editor.

--- a/plugins/csp-demo-node-editor/CMakeLists.txt
+++ b/plugins/csp-demo-node-editor/CMakeLists.txt
@@ -20,11 +20,14 @@ file(GLOB NODE_FILES src/nodes/*.js)
 file(GLOB HEADER_FILES src/*.hpp)
 file(GLOB_RECURSE CONTROL_FILES src/controls/*.js)
 
+file(GLOB_RECURSE THIRD_PARTY_FILES src/third-party/*)
+
 add_library(csp-demo-node-editor SHARED
   ${SOURCE_FILES}
   ${HEADER_FILES}
   ${NODE_FILES}
   ${CONTROL_FILES}
+  ${THIRD_PARTY_FILES}
 )
 
 target_link_libraries(csp-demo-node-editor
@@ -41,9 +44,12 @@ set_source_files_properties(${NODE_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
 # We mark all control source files as "header" in order to make sure that no one tries to compile them.
 set_source_files_properties(${CONTROL_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
 
+# We mark all control third party files as "header" in order to make sure that no one tries to compile them.
+set_source_files_properties(${THIRD_PARTY_FILES} PROPERTIES HEADER_FILE_ONLY TRUE)
+
 # Make directory structure available in your IDE.
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES 
-  ${SOURCE_FILES} ${HEADER_FILES} ${NODE_FILES} ${CONTROL_FILES}
+  ${SOURCE_FILES} ${HEADER_FILES} ${NODE_FILES} ${CONTROL_FILES} ${THIRD_PARTY_FILES}
 )
 
 # install plugin -----------------------------------------------------------------------------------
@@ -51,4 +57,5 @@ source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
 install(TARGETS csp-demo-node-editor  DESTINATION "share/plugins")
 install(FILES   ${NODE_FILES}         DESTINATION "share/resources/nodes/csp-demo-node-editor")
 install(FILES   ${CONTROL_FILES}      DESTINATION "share/resources/nodes/csp-demo-node-editor")
+install(FILES   ${THIRD_PARTY_FILES}  DESTINATION "share/resources/gui/third-party")
 
