--- a/plugins/csp-visual-query/CMakeLists.txt
+++ b/plugins/csp-visual-query/CMakeLists.txt
@@ -18,6 +18,9 @@ file(GLOB SHADER_FILES src/*/*.glsl src/*/*/*.glsl)
 file(GLOB NODE_FILES src/*/*.js src/*/*/*.js)
 file(GLOB CONTROL_FILES src/controls/*.js)
 
+file(GLOB_RECURSE THIRD_PARTY_JS src/third-party/*.js src/third-party/*.js.map)
+file(GLOB_RECURSE THIRD_PARTY_CSS src/third-party/*.css)
+
 # Resource files and header files are only added in order to make them available in your IDE.
 file(GLOB HEADER_FILES src/*.hpp src/*/*.hpp src/*/*/*.hpp)
 file(GLOB_RECURSE RESOURCE_FILES gui/*)
@@ -29,6 +32,8 @@ add_library(csp-visual-query SHARED
   ${NODE_FILES}
   ${CONTROL_FILES}
   ${RESOURCE_FILES}
+  ${THIRD_PARTY_JS}
+  ${THIRD_PARTY_CSS}
 )
 
 target_link_libraries(csp-visual-query
@@ -42,14 +47,17 @@ target_link_libraries(csp-visual-query
 set_property(TARGET csp-visual-query PROPERTY FOLDER "plugins")
 
 # We mark all resource files as "header" in order to make sure that no one tries to compile them.
-set_source_files_properties(${RESOURCE_FILES} PROPERTIES HEADER_FILE_ONLY true)
-set_source_files_properties(${SHADER_FILES}   PROPERTIES HEADER_FILE_ONLY true)
-set_source_files_properties(${NODE_FILES}     PROPERTIES HEADER_FILE_ONLY true)
-set_source_files_properties(${CONTROL_FILES}  PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${RESOURCE_FILES}  PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${SHADER_FILES}    PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${NODE_FILES}      PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${CONTROL_FILES}   PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${THIRD_PARTY_JS}  PROPERTIES HEADER_FILE_ONLY true)
+set_source_files_properties(${THIRD_PARTY_CSS} PROPERTIES HEADER_FILE_ONLY true)
+
 
 # Make directory structure available in your IDE.
 source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
-  ${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES} ${NODE_FILES} ${CONTROL_FILES} ${RESOURCE_FILES}
+  ${SOURCE_FILES} ${HEADER_FILES} ${SHADER_FILES} ${NODE_FILES} ${CONTROL_FILES} ${RESOURCE_FILES} ${THIRD_PARTY_JS} ${THIRD_PARTY_CSS}
 )
 
 # install plugin -----------------------------------------------------------------------------------
@@ -59,4 +67,6 @@ install(DIRECTORY "gui" DESTINATION "share/resources")
 install(FILES   ${SHADER_FILES}       DESTINATION "share/resources/shaders/csp-visual-query")
 install(FILES   ${NODE_FILES}         DESTINATION "share/resources/nodes/csp-visual-query")
 install(FILES   ${CONTROL_FILES}      DESTINATION "share/resources/nodes/csp-visual-query")
+install(FILES   ${THIRD_PARTY_JS}     DESTINATION "share/resources/gui/third-party/js")
+install(FILES   ${THIRD_PARTY_CSS}    DESTINATION "share/resources/gui/third-party/css")
 
