--- a/plugins/csp-guided-tour/CMakeLists.txt
+++ b/plugins/csp-guided-tour/CMakeLists.txt
@@ -44,3 +44,4 @@ source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES
 # install plugin -----------------------------------------------------------------------------------
 
 install(TARGETS   csp-guided-tour DESTINATION "share/plugins")
+install(DIRECTORY "gui"             DESTINATION "share/resources")
