--- a/config/base/vista/display_hmd.ini
+++ b/config/base/vista/display_hmd.ini
@@ -16,7 +16,7 @@ WINDOWINGTOOLKIT = OPENVR_SDL2
 NAME                = MIRROR_WINDOW
 STEREO              = false
 SIZE                = 1280, 800
-FULLSCREEN          = false
+FULLSCREEN          = true
 TITLE               = CosmoScout VR
 VSYNC               = false
 
