interaction.ini added icaros

--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -7,9 +7,9 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, SDL2CONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, CONTROLLERNAVIGATION
-DUMPDFNGRAPHS       = FALSE
+DEVICEDRIVERS       = KEYBOARD, MOUSE, SPACENAVIGATOR, SDL2CONTROLLER, ICAROS
+INTERACTIONCONTEXTS = KEYINPUT, MOUSEINPUT, MOUSEZOOM, MOUSEPAN, SPACENAVIGATION, KEYBOARDNAVIGATION, CONTROLLERNAVIGATION, ICAROSNAVIGATION
+DUMPDFNGRAPHS       = TRUE
 
 
 ###################### interaction contexts ###########################
@@ -41,6 +41,10 @@ GRAPH               = xml/keyboard_navigation.xml
 [CONTROLLERNAVIGATION]
 ROLE                = CONTROLLERNAVIGATION
 GRAPH               = xml/controller_navigation.xml
+
+[ICAROSNAVIGATION]
+ROLE                = ICAROSNAVIGATION
+GRAPH               = xml/icaros_navigation.xml 
 
 ######################## device drivers ###############################
 
@@ -84,3 +88,11 @@ RAWID               = 0
 
 [CONTROLLER_DB]
 PATH                = ../share/config/vista/gamecontrollerdb.txt
+
+[ICAROS]
+TYPE                = ICAROS
+HISTORY               = 10
+SENSORS              = ICAROS_CONTROLLER
+
+[ICAROS_CONTROLLER]
+RAWID                = 0
