--- a/config/base/vista/interaction.ini
+++ b/config/base/vista/interaction.ini
@@ -45,6 +45,7 @@ GRAPH               = xml/controller_navigation.xml
 [ICAROSNAVIGATION]
 ROLE                = ICAROSNAVIGATION
 GRAPH               = xml/icaros_navigation.xml 
+RELOADTRIGGER		= T
 
 ######################## device drivers ###############################
 
