forwars movement is working

--- a/config/base/vista/interaction_hmd.ini
+++ b/config/base/vista/interaction_hmd.ini
@@ -7,8 +7,8 @@
 
 [SYSTEM]
 DRIVERPLUGINDIRS    = ${VISTACORELIBS_DRIVER_PLUGIN_DIRS}
-DEVICEDRIVERS       = KEYBOARD, MOUSE, OPENVRDRIVER, SDL2CONTROLLER
-INTERACTIONCONTEXTS = KEYINPUT, KEYBOARDNAVIGATION, HEADTRACKING, FLYSTICKNAVIGATION, FLYSTICKINPUT, CONTROLLERNAVIGATION
+DEVICEDRIVERS       = KEYBOARD, MOUSE, OPENVRDRIVER, SDL2CONTROLLER, ICAROS
+INTERACTIONCONTEXTS = KEYINPUT, KEYBOARDNAVIGATION, HEADTRACKING, FLYSTICKNAVIGATION, FLYSTICKINPUT, CONTROLLERNAVIGATION, ICAROSNAVIGATION
 
 ###################### interaction contexts ###########################
 
@@ -35,6 +35,11 @@ GRAPH               = xml/openvr_standardinput.xml
 [CONTROLLERNAVIGATION]
 ROLE                = CONTROLLERNAVIGATION
 GRAPH               = xml/controller_navigation.xml
+
+[ICAROSNAVIGATION]
+ROLE                = ICAROSNAVIGATION
+GRAPH               = xml/icaros_navigation.xml 
+RELOADTRIGGER		= T
 
 ######################## device drivers ###############################
 
@@ -83,3 +88,12 @@ RAWID               = 0
 
 [CONTROLLER_DB]
 PATH                = ../share/config/vista/gamecontrollerdb.txt
+
+
+[ICAROS]
+TYPE                = ICAROS
+HISTORY               = 10
+SENSORS              = ICAROS_CONTROLLER
+
+[ICAROS_CONTROLLER]
+RAWID                = 0
