--- a/config/base/vista/display.ini
+++ b/config/base/vista/display.ini
@@ -5,9 +5,9 @@
 # SPDX-FileCopyrightText: German Aerospace Center (DLR) <cosmoscout@dlr.de>
 # SPDX-License-Identifier: CC0-1.0
 
-[FONTS]
+#[FONTS]
 # MONO_FONT           = fonts/SometypeMono-Regular.ttf
-SANS_FONT           = fonts/OpenSans-Regular.ttf
+# SANS_FONT           = fonts/OpenSans-Regular.ttf
 # SERIF_FONT          = fonts/SourceSerifPro-Regular.ttf
  
 [SYSTEM]
