--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,6 @@
 [submodule "plugins/csp-atmospheres/bruneton-preprocessor/output"]
 	path = plugins/csp-atmospheres/bruneton-preprocessor/output
 	url = https://github.com/cosmoscout/atmosphere-data.git
+[submodule "externals/TileableVolumeNoise"]
+	path = externals/TileableVolumeNoise
+	url = https://github.com/sebh/TileableVolumeNoise
